force-app/main/default/objects/Sales_Acceptance_Policy__mdt/Sales_Acceptance_Policy__mdt.object-meta.xml
<CustomObject>
    <description>BR-15, BR-16, PD-12. THE GOVERNED DEFINITION OF SALES ACCEPTANCE. The active record states what must be true before a Marketing-qualified Lead may become SAL, which stage that governs, and the version stamped onto accepted records. A SEPARATE TYPE FROM MQL_Qualification_Policy__mdt on purpose: that type is named for, and scoped to, Marketing qualification, and stretching it to cover Sales acceptance would have started the slide toward a generic lifecycle policy object. Two small explicit types beat one abstract one. NOT A RULES ENGINE: a fixed schema of named checkboxes - no expressions, field names, operators, weights or nested groups. CONVENTION: exactly one active record per governed stage, enforced by repository test rather than by the platform. SYNTHETIC BASELINE - authored for reproducible demonstration, not a validated client requirement.</description>
    <label>Sales Acceptance Policy</label>
    <pluralLabel>Sales Acceptance Policies</pluralLabel>
</CustomObject>