force-app/main/default/objects/Sales_Acceptance_Policy__mdt/fields/Accepted_Stage__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Stage__c</fullName>
    <description>The exact Lead.Status value this policy governs. Held here so the Flow can ask whether the stage being entered is the governed one WITHOUT naming a stage in a Flow condition - the same property that keeps Lifecycle_Transition__mdt the single definition of an allowed transition.</description>
    <inlineHelpText>Accepted Stage.</inlineHelpText>
    <label>Accepted Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>