force-app/main/default/objects/Sales_Acceptance_Policy__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Whether this policy version is in force.</description>
    <inlineHelpText>Is Active.</inlineHelpText>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>