force-app/main/default/objects/Sales_Acceptance_Policy__mdt/fields/Require_Explicit_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Require_Explicit_Acceptance__c</fullName>
    <description>Whether SAL requires the seller to have explicitly ticked Sales_Accepted__c. This is the requirement that stops acceptance being inferred from the Status change itself.</description>
    <inlineHelpText>Require Explicit Sales Acceptance.</inlineHelpText>
    <label>Require Explicit Sales Acceptance</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>