force-app/main/default/objects/Sales_Acceptance_Policy__mdt/fields/Require_MQL_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Require_MQL_Evidence__c</fullName>
    <description>Whether SAL requires the Lead to carry MQL qualification evidence (MQL_Basis__c). An EVIDENCE-CHAIN check, not a re-evaluation: this Flow never re-tests the MQL requirements, so the MQL definition is not duplicated here. It asks only whether the Marketing claim was substantiated when it was made.</description>
    <inlineHelpText>Require Substantiated MQL Handoff.</inlineHelpText>
    <label>Require Substantiated MQL Handoff</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>